Conform FFM examples to Java 21 (#1)